# FirFoto-Viewer

./: .gitignore  FirFotoViewer-plan.md  README.md  pyproject.toml
firfoto_viewer/: README.md  pubspec.yaml
firfoto_viewer/android/app/: build.gradle.kts
firfoto_viewer/ios/Runner/: Info.plist
firfoto_viewer/ios/Runner.xcodeproj/: project.pbxproj
firfoto_viewer/lib/: main.dart
firfoto_viewer/lib/src/: app.dart
firfoto_viewer/lib/src/viewer/: analysis_summary.dart  analyze_bridge.dart  bridge_runtime.dart  feedback_bridge.dart  file_metadata.dart  metadata_bridge.dart  photo_entry.dart  preview_bridge.dart  preview_snapshot.dart  results_bridge.dart  viewer_controller.dart  (+1 more)
firfoto_viewer/linux/: CMakeLists.txt
firfoto_viewer/linux/runner/: my_application.cc
firfoto_viewer/macos/Runner/: AppDelegate.swift  Info.plist  MainFlutterWindow.swift
firfoto_viewer/macos/Runner.xcodeproj/: project.pbxproj
firfoto_viewer/test/: exposure_gain_test.dart  widget_test.dart
firfoto_viewer/windows/: CMakeLists.txt
firfoto_viewer/windows/runner/: Runner.rc  main.cpp
script/: build_and_install.sh  build_and_run.sh  package_dmg.sh
scripts/: bootstrap_testbed.sh
src/firfoto/: __init__.py  cli.py
src/firfoto/config/: defaults.toml
src/firfoto/core/: __init__.py  analyzer.py  config.py  identification.py  image_metrics.py  metadata.py  models.py  rules.py  scanner.py  workflow.py
src/firfoto/gui/: __init__.py  formatters.py  image_loader.py  qt_app.py
src/firfoto/storage/: sqlite.py
tests/: test_gui_helpers.py  test_qt_gui.py  test_scaffold.py
(+4 files in other folders)
