[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "firfoto"
version = "0.1.0"
description = "Cross-platform photo culling assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "Pillow>=10.4",
  "exifread>=3.0",
  "rawpy>=0.24",
  "pillow-heif>=0.18",
  "pillow-avif-plugin>=1.4",
]

[project.scripts]
firfoto = "firfoto.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
